Center pieces on MacOS.

--- a/chess.html
+++ b/chess.html
@@ -83,7 +83,11 @@
 
 		.piece {
 			background-color: transparent;
+			height: 1em;
 			line-height: 1em;
+			width: 1em;
+			text-align: center;
+			display: block;
 			pointer-events: none;
 			position: absolute;
 			transition: 0.4s;
